# Manor-Engine

./: CMakeLists.txt  Dockerfile
scripts/: Docker_Ubuntu.sh
src/Editor/: Test.h  main.cpp
src/Editor/Layers/: EditorLayer.h
src/Engine/Core/: Application.cpp  Application.h  EntryPoint.cpp  Event.h  EventSystem.cpp  EventSystem.h  FileStream.h  Layer.h  LayerSystem.cpp  LayerSystem.h  Log.cpp  Log.h  Resource.h  ResourceManager.cpp  ResourceManager.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
src/Engine/Renderer/Backends/: Backend.h  OpenGLBackend.h
src/Engine/Renderer/Backends/Shaders/: OpenGLShaderResource.h  ShaderResource.h
src/Engine/Utils/: FileStream.cpp
